tests/baselines/reference/classInheritence.errors.txt
==== tests/cases/compiler/classInheritence.ts (1 errors) ====
    class B extends A { }
    class A extends A { }
          ~
!!! error TS2310: Type 'A' recursively references itself as a base type.